--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <div class="pure-g">
+    
+    <input type="range">
 
     <!-- Video area -->
     <div class="pure-u-2-3" id="video-container">
