--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <div class="pure-g">
-    
-    <input type="range">
+
+    <!-- Audio area -->
+    <p>Volume Cntrol</p>
+    <p>small</p><input type="range"><p>large</p>
 
     <!-- Video area -->
     <div class="pure-u-2-3" id="video-container">
