--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <div class="pure-g">
 
     <!-- Audio area -->
-    <p>Volume Cntrol</p>
-    <p>small</p><input type="range"><p>large</p>
+    <input type="range">
 
     <!-- Video area -->
     <div class="pure-u-2-3" id="video-container">
